fixing attribute, wrapped macros button

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -622,16 +622,19 @@ span.unit
 
   .macros-div
     display flex
-    justify-content space-around
+    flex-wrap wrap
+    justify-content flex-start
     margin 10px
-    margin-left 100px
+    margin-left 50px
+    margin-bottom 30px
 
   .macros-button
     height 60px
-    width 140px
+    width 90px
     font-weight normal
     border-radius 10px
     margin-left 1rem
+    margin-top 1rem
     border 0
     color #fff
     box-shadow rgba(0, 0, 0, 0.3) 0px 0px 5px
